_sass/main.scss
$mq-breakpoints: (
  xs: 0,
  sm: 400px,
  md: 590px,
  lg: 720px,
  xl: 960px
) !default;

$grid-gutter: 40px;

$med-grey: #999;
$dark-grey: #333;
$light-grey: #e5e5e5;
$print-grey: mix($light-grey, $med-grey, 50%);

$spacing-base: 1.5em;

@mixin print {
  @include mq(0px, $media-type: print) {
    @content;
  }
}

@import 'baseguide';

@include print {
  body {
    font-size: 12px;
  }
}

@mixin thick-border {
  border-top: $dark-grey 0.5em solid;
}

@mixin thin-border {
  border-top: $med-grey 0.05em solid;
}

@page {
  margin-top: 1.2cm;
  margin-bottom: 0cm;
  margin-left: 0.5cm;
  margin-right: 0.5cm;
}

@page :first {
  margin-bottom: 0.5cm;
}

@mixin leftColumn {
  @include column-base;

  @include print {
    @include column(30%);

    text-align: right;
  }
  @include mq(md, $media-type: screen) {
    @include column(40%);

    text-align: right;
  }
}

@mixin rightColumn {
  @include column-base;

  @include print {
    @include column(70%);
  }
  @include mq(md, $media-type: screen) {
    @include column(60%);
  }
}

@mixin section {
  @include row;
  @include thin-border;
  padding-top: $spacing-base;
}

@mixin bottom {
  position: absolute;
  bottom: 0;
}

main {
  @include container;
}

footer {
  @include thin-border;
  min-height: 10rem;
  background-color: $light-grey;
  margin-top: $spacing-base;

  div.wrapper {
    @include container;
    padding-top: $spacing-base;
  }

  @include print {
    display: none;
  }
}

.top-matter {
  @include row;
  @include thick-border;
  padding-top: $spacing-base;
  position: relative;

  @include print {
    padding-top: 0;
    border-top: none;
  }

  header {
    @include leftColumn;

    @include mq(xs, md, $media-type: screen) {
      @include column(80%);
    }

    @include print {
      @include column(50%);
      text-align: left;
    }

    .subtitle {
      font-size: 1.3rem;
      display: block;
      font-weight: $font-weight-base;
      color: $med-grey;
      @include print {
        color: $print-grey !important;
      }
    }

    .availability {
      @include print {
        display: none;
      }
    }
  }

  nav {
    @include rightColumn;
    min-height: 2em;

    ul.navigation {
      @include list-inline;
      @include bottom;
      margin-bottom: $spacing-base;
    }
    @include print {
      display: none;
    }
  }

  address {
    display: none;
    @include print {
      @include column-base;
      @include column(50%);
      display: block;
      text-align: right;

      .dim {
        color: $print-grey !important;
      }
    }
  }
}

section.statement {
  @include row;

  .avatar {
    @include leftColumn;
    padding-bottom: $spacing-base;

    img {
      -webkit-border-radius: 99em;
      -moz-border-radius: 99em;
      border-radius: 99em;
      box-shadow: 0 1px 3px 1px rgba(0,0,0,0.25);
      @include print {
        width: 8rem;
        height: 8rem;
      }
    }
  }

  .personalStatement {
    @include rightColumn;
  }
}

section {
  @include row;
  @include print {
    page-break-inside: avoid;
  }

  &.groupHeading {
    @include section;
    margin-top: $spacing-base;
    padding-top: 2 * $spacing-base;
    @include print {
      page-break-inside: avoid;
      -webkit-column-break-after: avoid;
      page-break-after: avoid;
      break-after: avoid;
      margin-top: 0;
      padding-top: 0;
      border: 0;
    }
  }

  &.experience {
    margin-top: $spacing-base;
  }

  header {
    @include leftColumn;

    h1, h2, h3, h4, h5, h6 {
      white-space: nowrap;
    }

    .client {
      //font-weight: 700;
      display: block;
    }
    .duration {
      color: $med-grey;
      @include print {
        color: $print-grey !important;
      }
      display: block;
      margin-bottom: $spacing-base;
    }
    .date {
      @include print {
        color: $print-grey !important;
      }
      color: $med-grey;
      display: block;
    }

    &:hover a.anchor {
      color: $light-grey;
    }
    a.anchor {
      display: inline;
      padding-top: 1em;
      color: rgba(0, 0, 0, 0);

      @include print {
        display: none;
      }
    }

    h3 {
      font-size: 1.3rem;
      margin-bottom: 0;
    }

    @include print {
      h2 {
        font-size: 1.8rem;
      }
      page-break-inside: avoid;
    }
  }

  div {
    @include rightColumn;

    .label {
      font-weight: 700;
      display: inline-block;
      width: 5rem;
    }
  }
}

ul {
  padding-left: 1rem;

  &.unstyled {
    @include list-unstyled;
  }

  &.inline {
    @include list-inline;
    margin-left: 0;
    padding: 0;

    &:before {
      content:attr(aria-label);
      display: inline-block;
      float: left;
      margin-right: 0.5em;
    }

    li {
      margin-left: 0;
      margin-right: 0.5em;

      &:after {
        content: ', ';
      }

      &:last-child:after {
        content: '';
      }

      &.skill {
        font-style: italic;
      }
    }

    @include print {
      &.contacts, &.sources {
        li {
          clear: left;
          list-style: disc;
          margin-left: 1rem;

          &:after {
            content: '';
          }
        }
      }
    }
  }
}

span.school {
  font-style: italic;
}

@include print {
  a {
    text-decoration: none;
    &:after {
      content: ' (' attr(href) ')';
      color: $print-grey !important;
    }
  }
  section.contacts,
  a.anchor {
    display: none;
  }
}

@mixin iconAfter($icon) {
  cursor: pointer;

  &::after {
    content: "";
    height: 1em;
    width: 1em;
    margin-left: 0.4em;

    background-size: 1em;
    background-repeat: no-repeat;
    background-image: $icon;

    display: inline-block;
    vertical-align: text-top;
  }
}

.buttons {
  position: absolute;
  right: $spacing-base;
  top: $spacing-base;
  @include list-unstyled;

  @include print {
    display: none;
  }
}

.pdf-button {
  @include iconAfter(url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg viewBox='0 0 1792 1792' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1596 380q28 28 48 76t20 88v1152q0 40-28 68t-68 28h-1344q-40 0-68-28t-28-68v-1600q0-40 28-68t68-28h896q40 0 88 20t76 48zm-444-244v376h376q-10-29-22-41l-313-313q-12-12-41-22zm384 1528v-1024h-416q-40 0-68-28t-28-68v-416h-768v1536h1280zm-514-593q33 26 84 56 59-7 117-7 147 0 177 49 16 22 2 52 0 1-1 2l-2 2v1q-6 38-71 38-48 0-115-20t-130-53q-221 24-392 83-153 262-242 262-15 0-28-7l-24-12q-1-1-6-5-10-10-6-36 9-40 56-91.5t132-96.5q14-9 23 6 2 2 2 4 52-85 107-197 68-136 104-262-24-82-30.5-159.5t6.5-127.5q11-40 42-40h22q23 0 35 15 18 21 9 68-2 6-4 8 1 3 1 8v30q-2 123-14 192 55 164 146 238zm-576 411q52-24 137-158-51 40-87.5 84t-49.5 74zm398-920q-15 42-2 132 1-7 7-44 0-3 7-43 1-4 4-8-1-1-1-2-1-2-1-3-1-22-13-36 0 1-1 2v2zm-124 661q135-54 284-81-2-1-13-9.5t-16-13.5q-76-67-127-176-27 86-83 197-30 56-45 83zm646-16q-24-24-140-24 76 28 124 28 14 0 18-1 0-1-2-3z'/%3E%3C/svg%3E"));
}

.print-button {
  @include iconAfter(url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg viewBox='0 0 1792 1792' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M448 1536h896v-256h-896v256zm0-640h896v-384h-160q-40 0-68-28t-28-68v-160h-640v640zm1152 64q0-26-19-45t-45-19-45 19-19 45 19 45 45 19 45-19 19-45zm128 0v416q0 13-9.5 22.5t-22.5 9.5h-224v160q0 40-28 68t-68 28h-960q-40 0-68-28t-28-68v-160h-224q-13 0-22.5-9.5t-9.5-22.5v-416q0-79 56.5-135.5t135.5-56.5h64v-544q0-40 28-68t68-28h672q40 0 88 20t76 48l152 152q28 28 48 76t20 88v256h64q79 0 135.5 56.5t56.5 135.5z'/%3E%3C/svg%3E"));
}

